    agent.
  * Fix some minor bugs.
  * Add oidc-keychain to reuse oidc-agent across logins

  [ Gabriel Zachmann ]
  * Remove dot files from oidc-add and oidc-gen -l
  * Add a header line for oidc-add -a

  [ Gabriel Zachmann ]
  * Add aai-demo.egi.eu
  * Add public client for aai-demo.egi.eu

  [ Gabriel Zachmann ]
  * Fix --pw-cmd not correctly working when output does not end with newline
    character
  * Fix duplicated output of oidc-agent when redirecting
  * Fix oidc-agent dies when client disconnects before agent can write back.

  [ Gabriel Zachmann ]
  * Updated the issuer urls of HDF.
  * Fix bash completion of shortnames if $OIDC_CONFIG_DIR is used.

  [ Gabriel Zachmann ]
  * Add possibility for force a new AT through oidc-token.
  * Add status command to oidc-agent to get information about the currently
    running agent.
  * Allow users to rename accounts.
  * Write temporary data to oidc-agent instead of tmp file.
  * Fix seg fault in oidc-gen issuer selection when selecting 0
  * Delete oidc client when deleting agent configuration.
  * Improved bash completion of oidc-gen short options.
  * Add --pw-file option to read decryption password from file
  * Improve password prompt on autoload.
  * On default cnid (oidc-gen) is set to the hostname; so the hostname is
    included in the client name.
  * oidc-gen is now completly non-interactive
  * Added several new options for passing information to oidc-gen
  * User can now choose between cli and gui prompts.
  * Fix bug where oidc-gen would use a public client instead of aborting when
    generating a account configuration with a shortname that is already
    loaded.
  * When the 'max' keyword is used for scopes and a public client is used,
    this now uses the maximum scopes for that public client, not the issuer.
  * Fixes a possible conflict between the application type 'web' and custom
    scheme redirect uris.

 -- Marcus Hardt <hardt@kit.edu>  Fri, 24 Jul 2020 09:12:54 +0200